# ArrheniusCalculator

./: .gitignore  README.md  main.py  pyproject.toml
arrheniuscalculator/: main.py
arrheniuscalculator/qml/: AboutView.qml  ArrheniusCalc.js  BasicCalculationView.qml  FunctionCalculationView.qml  HomeView.qml  Main.qml  OptionView.qml  TextDataCalculationView.qml
arrheniuscalculator/qml/ArrheniusCalculator/: AppButton.qml  BackButton.qml  CalcStatusBar.qml  CelsiusCheckBox.qml  DividerLine.qml  HelpButton.qml  ParamField.qml  ResultBox.qml  RuleLine.qml  SectionLabel.qml  Style.qml  VhsSection.qml  qmldir
qml/: AboutView.qml  AppButton.qml  BasicCalculationView.qml  HomeView.qml  Main.qml  OptionView.qml
