[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arrheniuscalculator"
version = "0.1.1"
description = "A simple GUI tool for calculating Arrhenius integral."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arrheniuscalculator*"]

[tool.setuptools.package-data]
"arrheniuscalculator" = [
    "qml/*.qml",
    "qml/ArrheniusCalculator/*"
]

[project.scripts]
arrheniuscalculator = "arrheniuscalculator.main:main"
