[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arrheniuscalculator"
version = "0.1.3"
description = "A simple GUI tool for calculating Arrhenius integral."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6",
]
authors = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]
maintainers = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]

[project.urls]
"Homepage" = "https://github.com/TZ387/ArrheniusCalculator"
"Repository" = "https://github.com/TZ387/ArrheniusCalculator"
"Bug Tracker" = "https://github.com/TZ387/ArrheniusCalculator/issues"
"Documentation" = "https://github.com/TZ387/ArrheniusCalculator#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["arrheniuscalculator*"]

[tool.setuptools.package-data]
"arrheniuscalculator" = [
    "qml/*.qml",
    "qml/ArrheniusCalculator/*"
]

[project.scripts]
arrheniuscalculator = "arrheniuscalculator.main:main"
