[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arrheniuscalculator"
version = "0.1.7.1"
description = "A simple GUI tool for calculating Arrhenius integral."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["arrhenius", "calculator", "thermal", "qml", "gui"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyside6>=6.5",
]
authors = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]
maintainers = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]

[project.urls]
"Homepage" = "https://github.com/TZ387/ArrheniusCalculator"
"Repository" = "https://github.com/TZ387/ArrheniusCalculator"
"Bug Tracker" = "https://github.com/TZ387/ArrheniusCalculator/issues"
"Documentation" = "https://github.com/TZ387/ArrheniusCalculator#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["arrheniuscalculator*"]

[tool.setuptools.package-data]
"arrheniuscalculator" = [
    "qml/*",
    "qml/ArrheniusCalculator/*"
]

[project.gui-scripts]
arrheniuscalculator = "arrheniuscalculator.main:main"